--- a/TestPush3Src/TestPush3Src.csproj
+++ b/TestPush3Src/TestPush3Src.csproj
@@ -51,6 +51,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Popup.cs" />
+    <Compile Include="Popup2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
